charts/redhat/redhat/cryostat/0.2.0/src/README.md
# Cryostat Helm Chart
A Helm chart for deploying [Cryostat](https://cryostat.io/) on Kubernetes and OpenShift

## Parameters

### Cryostat Container

| Name                                           | Description                                                                                                                                                                                                                                                                                                    | Value                                                     |
| ---------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------- |
| `core`                                         | Configuration for the core Cryostat application                                                                                                                                                                                                                                                                |                                                           |
| `core.image.repository`                        | Repository for the main Cryostat container image                                                                                                                                                                                                                                                               | `registry.redhat.io/cryostat-tech-preview/cryostat-rhel8` |
| `core.image.pullPolicy`                        | Image pull policy for the main Cryostat container image                                                                                                                                                                                                                                                        | `IfNotPresent`                                            |
| `core.image.tag`                               | Tag for the main Cryostat container image                                                                                                                                                                                                                                                                      | `2.2.0`                                                   |
| `core.service.type`                            | Type of Service to create for the Cryostat application                                                                                                                                                                                                                                                         | `ClusterIP`                                               |
| `core.service.httpPort`                        | Port number to expose on the Service for Cryostat's HTTP server                                                                                                                                                                                                                                                | `8181`                                                    |
| `core.service.jmxPort`                         | Port number to expose on the Service for remote JMX connections to Cryostat                                                                                                                                                                                                                                    | `9091`                                                    |
| `core.sslProxied`                              | Enables SSL Proxied Environment Variables, useful when you are offloading SSL/TLS at External Loadbalancer instead of Ingress                                                                                                                                                                                  | `false`                                                   |
| `core.ingress.enabled`                         | Whether to create an Ingress object for the Cryostat service                                                                                                                                                                                                                                                   | `false`                                                   |
| `core.ingress.className`                       | Ingress class name for the Cryostat application Ingress                                                                                                                                                                                                                                                        | `""`                                                      |
| `core.ingress.annotations`                     | Annotations to apply to the Cryostat application Ingress                                                                                                                                                                                                                                                       | `{}`                                                      |
| `core.ingress.hosts`                           | Hosts to create rules for in the Cryostat application Ingress. See: [IngressSpec](https://kubernetes.io/docs/reference/kubernetes-api/service-resources/ingress-v1/#IngressSpec)                                                                                                                               | `[]`                                                      |
| `core.ingress.tls`                             | TLS configuration for the Cryostat application Ingress. See: [IngressSpec](https://kubernetes.io/docs/reference/kubernetes-api/service-resources/ingress-v1/#IngressSpec)                                                                                                                                      | `[]`                                                      |
| `core.route.enabled`                           | Whether to create a Route object for the Cryostat service. Available only on OpenShift                                                                                                                                                                                                                         | `true`                                                    |
| `core.route.tls.enabled`                       | Whether to secure the Cryostat application Route with TLS. See: [TLSConfig](https://docs.openshift.com/container-platform/4.10/rest_api/network_apis/route-route-openshift-io-v1.html#spec-tls)                                                                                                                | `true`                                                    |
| `core.route.tls.termination`                   | Type of TLS termination to use for the Cryostat application Route. One of: `edge`, `passthrough`, `reencrypt`                                                                                                                                                                                                  | `edge`                                                    |
| `core.route.tls.insecureEdgeTerminationPolicy` | Specify how to handle insecure traffic for the Cryostat application Route. One of: `Allow`, `Disable`, `Redirect`                                                                                                                                                                                              | `Redirect`                                                |
| `core.route.tls.key`                           | Custom private key to use when securing the Cryostat application Route                                                                                                                                                                                                                                         | `""`                                                      |
| `core.route.tls.certificate`                   | Custom certificate to use when securing the Cryostat application Route                                                                                                                                                                                                                                         | `""`                                                      |
| `core.route.tls.caCertificate`                 | Custom CA certificate to use, if needed to complete the certificate chain, when securing the Cryostat application Route                                                                                                                                                                                        | `""`                                                      |
| `core.route.tls.destinationCACertificate`      | Provides the contents of the CA certificate of the final destination when using reencrypt termination for the Cryostat application Route                                                                                                                                                                       | `""`                                                      |
| `core.resources`                               | Resource requests/limits for the Cryostat container. See: [ResourceRequirements](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#resources)                                                                                                                                     | `{}`                                                      |
| `core.securityContext`                         | Security Context for the Cryostat container. Defaults to meet "restricted" [Pod Security Standard](https://kubernetes.io/docs/concepts/security/pod-security-standards/#restricted). See: [SecurityContext](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#security-context-1) | `{}`                                                      |
| `core.databaseSecretName`                      | Name of the secret to extract password for credentials database.                                                                                                                                                                                                                                               | `""`                                                      |


### Grafana Container

| Name                                              | Description                                                                                                                                                                                                                                                                                                   | Value                                                                       |
| ------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------- |
| `grafana`                                         | Configuration for the customized Grafana instance for Cryostat                                                                                                                                                                                                                                                |                                                                             |
| `grafana.image.repository`                        | Repository for the Grafana container image                                                                                                                                                                                                                                                                    | `registry.redhat.io/cryostat-tech-preview/cryostat-grafana-dashboard-rhel8` |
| `grafana.image.pullPolicy`                        | Image pull policy for the Grafana container image                                                                                                                                                                                                                                                             | `IfNotPresent`                                                              |
| `grafana.image.tag`                               | Tag for the Grafana container image                                                                                                                                                                                                                                                                           | `2.2.0`                                                                     |
| `grafana.service.type`                            | Type of Service to create for Grafana                                                                                                                                                                                                                                                                         | `ClusterIP`                                                                 |
| `grafana.service.port`                            | Port number to expose on the Service for Grafana's HTTP server                                                                                                                                                                                                                                                | `3000`                                                                      |
| `grafana.sslProxied`                              | Enables SSL Proxied Environment Variables, useful when you are offloading SSL/TLS at External Loadbalancer instead of Ingress                                                                                                                                                                                 | `false`                                                                     |
| `grafana.ingress.enabled`                         | Whether to create an Ingress object for the Grafana service                                                                                                                                                                                                                                                   | `false`                                                                     |
| `grafana.ingress.className`                       | Ingress class name for the Grafana Ingress                                                                                                                                                                                                                                                                    | `""`                                                                        |
| `grafana.ingress.annotations`                     | Annotations to apply to the Grafana Ingress                                                                                                                                                                                                                                                                   | `{}`                                                                        |
| `grafana.ingress.hosts`                           | Hosts to create rules for in the Grafana Ingress. See: [IngressSpec](https://kubernetes.io/docs/reference/kubernetes-api/service-resources/ingress-v1/#IngressSpec)                                                                                                                                           | `[]`                                                                        |
| `grafana.ingress.tls`                             | TLS configuration for the Grafana Ingress. See: [IngressSpec](https://kubernetes.io/docs/reference/kubernetes-api/service-resources/ingress-v1/#IngressSpec)                                                                                                                                                  | `[]`                                                                        |
| `grafana.route.enabled`                           | Whether to create a Route object for the Grafana service. Available only on OpenShift                                                                                                                                                                                                                         | `true`                                                                      |
| `grafana.route.tls.enabled`                       | Whether to secure the Grafana Route with TLS. See: [TLSConfig](https://docs.openshift.com/container-platform/4.10/rest_api/network_apis/route-route-openshift-io-v1.html#spec-tls)                                                                                                                            | `true`                                                                      |
| `grafana.route.tls.termination`                   | Type of TLS termination to use for the Grafana Route. One of: `edge`, `passthrough`, `reencrypt`                                                                                                                                                                                                              | `edge`                                                                      |
| `grafana.route.tls.insecureEdgeTerminationPolicy` | Specify how to handle insecure traffic for the Grafana Route. One of: `Allow`, `Disable`, `Redirect`                                                                                                                                                                                                          | `Redirect`                                                                  |
| `grafana.route.tls.key`                           | Custom private key to use when securing the Grafana Route                                                                                                                                                                                                                                                     | `""`                                                                        |
| `grafana.route.tls.certificate`                   | Custom certificate to use when securing the Grafana Route                                                                                                                                                                                                                                                     | `""`                                                                        |
| `grafana.route.tls.caCertificate`                 | Custom CA certificate to use, if needed to complete the certificate chain, when securing the Grafana Route                                                                                                                                                                                                    | `""`                                                                        |
| `grafana.route.tls.destinationCACertificate`      | Provides the contents of the CA certificate of the final destination when using reencrypt termination for the Grafana Route                                                                                                                                                                                   | `""`                                                                        |
| `grafana.resources`                               | Resource requests/limits for the Grafana container. See: [ResourceRequirements](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#resources)                                                                                                                                     | `{}`                                                                        |
| `grafana.securityContext`                         | Security Context for the Grafana container. Defaults to meet "restricted" [Pod Security Standard](https://kubernetes.io/docs/concepts/security/pod-security-standards/#restricted). See: [SecurityContext](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#security-context-1) | `{}`                                                                        |


### JFR Data Source Container

| Name                          | Description                                                                                                                                                                                                                                                                                                           | Value                                                           |
| ----------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------- |
| `datasource`                  | Configuration for the JFR Data Source component, which translates recording events into a format consumable by Grafana                                                                                                                                                                                                |                                                                 |
| `datasource.image.repository` | Repository for the JFR Data Source container image                                                                                                                                                                                                                                                                    | `registry.redhat.io/cryostat-tech-preview/jfr-datasource-rhel8` |
| `datasource.image.pullPolicy` | Image pull policy for the JFR Data Source container image                                                                                                                                                                                                                                                             | `IfNotPresent`                                                  |
| `datasource.image.tag`        | Tag for the JFR Data Source container image                                                                                                                                                                                                                                                                           | `2.2.0`                                                         |
| `datasource.resources`        | Resource requests/limits for the JFR Data Source container. See: [ResourceRequirements](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#resources)                                                                                                                                     | `{}`                                                            |
| `datasource.securityContext`  | Security Context for the JFR Data Source container. Defaults to meet "restricted" [Pod Security Standard](https://kubernetes.io/docs/concepts/security/pod-security-standards/#restricted). See: [SecurityContext](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#security-context-1) | `{}`                                                            |


### Other Parameters

| Name                         | Description                                                                                                                                                                                                                                                                                               | Value  |
| ---------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------ |
| `imagePullSecrets`           | Image pull secrets to be used for the Cryostat deployment                                                                                                                                                                                                                                                 | `[]`   |
| `nameOverride`               | Overrides the name of this Chart                                                                                                                                                                                                                                                                          | `""`   |
| `fullnameOverride`           | Overrides the fully qualified application name of `[release name]-[chart name]`                                                                                                                                                                                                                           | `""`   |
| `rbac.create`                | Specifies whether RBAC resources should be created                                                                                                                                                                                                                                                        | `true` |
| `serviceAccount.create`      | Specifies whether a service account should be created                                                                                                                                                                                                                                                     | `true` |
| `serviceAccount.annotations` | Annotations to add to the service account                                                                                                                                                                                                                                                                 | `{}`   |
| `serviceAccount.name`        | The name of the service account to use. If not set and create is true, a name is generated using the fullname template                                                                                                                                                                                    | `""`   |
| `podAnnotations`             | Annotations to be applied to the Cryostat Pod                                                                                                                                                                                                                                                             | `{}`   |
| `podSecurityContext`         | Security Context for the Cryostat Pod. Defaults to meet "restricted" [Pod Security Standard](https://kubernetes.io/docs/concepts/security/pod-security-standards/#restricted). See: [PodSecurityContext](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#security-context) | `{}`   |
| `nodeSelector`               | Node Selector for the Cryostat Pod. See: [NodeSelector](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#scheduling)                                                                                                                                                        | `{}`   |
| `tolerations`                | Tolerations for the Cryostat Pod. See: [Tolerations](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#scheduling)                                                                                                                                                           | `[]`   |
| `affinity`                   | Affinity for the Cryostat Pod. See: [Affinity](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#scheduling)                                                                                                                                                                 | `{}`   |


